boulder/tests/compile_fail/binop/bitand_ret_true.bo
# Mismatched types
# found `True`
# (6:
# (7:

fn bitand_ret_true(a: True, b: True) -> True {
    a & b
}